<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MazeGUI">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <GridLayout
        android:id="@+id/mazeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:padding="3dp"
        android:background="@color/Michigan_Blue">
    </GridLayout>
    
    <GridLayout android:layout_height="fill_parent" 
        android:layout_width="fill_parent" 
        android:id="@+id/movementGridLayout" 
        android:useDefaultMargins="false" 
        android:rowCount="4" 
        android:columnCount="3" 
        android:clickable="false">
        
        <Button android:id="@+id/leftButton" 
            android:text="@string/left" 
            android:contentDescription="@string/left_button_des" 
            android:layout_row="3" 
            android:layout_gravity="left|top" 
            android:layout_column="2"/>
        
        <Button android:id="@+id/upButton" 
            android:text="@string/up" 
            android:contentDescription="@string/up_button_des" 
            android:layout_row="0" 
            android:layout_gravity="center_horizontal|top" 
            android:layout_column="2"/>
        
        <Button android:id="@+id/downButton" 
            android:text="@string/down" 
            android:contentDescription="@string/down_button_des" 
            android:layout_row="3" 
            android:layout_gravity="center" 
            android:layout_column="2"/>
        
        <Button android:id="@+id/rightButton" 
            android:text="@string/right" 
            android:contentDescription="@string/right_button_des" 
            android:layout_row="3" 
            android:layout_gravity="right|top" 
            android:layout_column="2"/>
            
    	<Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:onClick="closeActivity"
        	android:text="@string/close" 
        	android:layout_gravity="center_horizontal|bottom"/>
    	
    </GridLayout>

</LinearLayout>
</ScrollView>
