<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/subjectSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/subjectSpinner" />

    <Spinner
        android:id="@+id/levelSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/levelSpinner" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="mazeStart"
        android:text="@string/start" />

</LinearLayout>